# drwnProject

./: LICENSE  README.md  Readme.md
projects/multiSeg/: msrcConfig.xml
projects/nnGraph/: drwnNNGraph.cpp
projects/nnGraph/example/: nnGraphConfig.xml
projects/objDetection/objDetection-src/: CMakeLists.txt  FeaturesContainer.cpp  FeaturesContainer.h  HOGFeatures.cpp  HOGFeatures.h  SuperPixelContainer.cpp  SuperPixelContainer.h  UnarySPSegPCA.cpp  UnarySPSegPCA.h  UnarySegmentation.cpp  UnarySegmentation.h  createsuperpixel.cpp  evaluatesuperpixelsegmentation.cpp  main.cpp
projects/objDetection/objDetection-src/MSRC_example/: MSRCConf.xml  SPHOGFeatureModel.xml
src/app/: generateSuperpixels.cpp
src/lib/: CMakeLists.txt
src/lib/base/: CMakeLists.txt  drwnCompatibility.h  drwnProperties.h
src/lib/io/: CMakeLists.txt
src/lib/ml/: CMakeLists.txt
src/lib/pgm/: CMakeLists.txt  drwnMaxFlow.h
src/lib/vision/: CMakeLists.txt  drwnColourHistogram.cpp  drwnColourHistogram.h
