cmake_minimum_required(VERSION 2.8)
project(objDetection)
find_package(OpenCV REQUIRED)
find_package(Eigen3)
find_package (Threads)
aux_source_directory(. src_list)
if (DEFINED $ENV{DRWN_DIR})
    set(DRW_DIR $ENV{DRWN_DIR})
else()
    set(DRWN_DIR /home/ebi/Projects/darwin)
endif()
include_directories(${DRWN_DIR}/include)
link_directories(${DRWN_DIR}/bin)
INCLUDE_DIRECTORIES("${EIGEN3_INCLUDE_DIR}")
add_subdirectory(${DRWN_DIR}/src/lib ${CMAKE_BINARY_DIR}/libs)
add_executable(${PROJECT_NAME} ${src_list})
target_link_libraries(${PROJECT_NAME} ${OpenCV_LIBS} drwnVision drwnPGM drwnML drwnIO drwnBase ${CMAKE_THREAD_LIBS_INIT})
set(CMAKE_BUILD_TYPE Debug)
SET(CMAKE_CXX_FLAGS "-std=c++11")
